lib/jsapi_wrap.rb

require 'rubygems'
require 'ffi'
module JsAPI
  extend FFI::Library
  ffi_lib 'mozjs'
  JS_BYTES_PER_BYTE = 1
  JS_BYTES_PER_SHORT = 2
  JS_BYTES_PER_INT = 4
  JS_BYTES_PER_LONG = 8
  attach_function :JSLL_MaxInt, [  ], :long
  attach_function :JSLL_MinInt, [  ], :long
  attach_function :JSLL_Zero, [  ], :long
  JSVERSION_UNKNOWN = -1
  JSVERSION_DEFAULT = 0
  JSVERSION_1_0 = 100
  JSVERSION_1_1 = 110
  JSVERSION_1_2 = 120
  JSVERSION_1_3 = 130
  JSVERSION_1_4 = 140
  JSVERSION_ECMA_3 = 148
  JSVERSION_1_5 = 150
  JSVERSION_1_6 = 160
  JSVERSION_1_7 = 170

  JSTYPE_VOID = 0
  JSTYPE_OBJECT = 1
  JSTYPE_FUNCTION = 2
  JSTYPE_STRING = 3
  JSTYPE_NUMBER = 4
  JSTYPE_BOOLEAN = 5
  JSTYPE_NULL = 6
  JSTYPE_XML = 7
  JSTYPE_LIMIT = 8

  JSProto_LIMIT = 0

  JSACC_PROTO = 0
  JSACC_PARENT = 1
  JSACC_IMPORT = 2
  JSACC_WATCH = 3
  JSACC_READ = 4
  JSACC_WRITE = 8
  JSACC_LIMIT = 9

  JSENUMERATE_INIT = 0
  JSENUMERATE_NEXT = 1
  JSENUMERATE_DESTROY = 2

  callback(:JSPropertyOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSNewEnumerateOp, [ :pointer, :pointer, :int, :pointer, :pointer ], :int)
  callback(:JSEnumerateOp, [ :pointer, :pointer ], :int)
  callback(:JSResolveOp, [ :pointer, :pointer, :long ], :int)
  callback(:JSNewResolveOp, [ :pointer, :pointer, :long, :uint, :pointer ], :int)
  callback(:JSConvertOp, [ :pointer, :pointer, :int, :pointer ], :int)
  callback(:JSFinalizeOp, [ :pointer, :pointer ], :void)
  callback(:JSStringFinalizeOp, [ :pointer, :pointer ], :void)
  callback(:JSGetObjectOps, [ :pointer, :pointer ], :pointer)
  callback(:JSCheckAccessOp, [ :pointer, :pointer, :long, :int, :pointer ], :int)
  callback(:JSXDRObjectOp, [ :pointer, :pointer ], :int)
  callback(:JSHasInstanceOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSMarkOp, [ :pointer, :pointer, :pointer ], :uint)
  callback(:JSReserveSlotsOp, [ :pointer, :pointer ], :uint)
  callback(:JSNewObjectMapOp, [ :pointer, :int, :pointer, :pointer, :pointer ], :pointer)
  callback(:JSObjectMapOp, [ :pointer, :pointer ], :void)
  callback(:JSLookupPropOp, [ :pointer, :pointer, :long, :pointer, :pointer ], :int)
  callback(:JSDefinePropOp, [ :pointer, :pointer, :long, :long, :JSPropertyOp, :JSPropertyOp, :uint, :pointer ], :int)
  callback(:JSPropertyIdOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSAttributesOp, [ :pointer, :pointer, :long, :pointer, :pointer ], :int)
  callback(:JSCheckAccessIdOp, [ :pointer, :pointer, :long, :int, :pointer, :pointer ], :int)
  callback(:JSObjectOp, [ :pointer, :pointer ], :pointer)
  callback(:JSPropertyRefOp, [ :pointer, :pointer, :pointer ], :void)
  callback(:JSSetObjectSlotOp, [ :pointer, :pointer, :uint, :pointer ], :int)
  callback(:JSGetRequiredSlotOp, [ :pointer, :pointer, :uint ], :long)
  callback(:JSSetRequiredSlotOp, [ :pointer, :pointer, :uint, :long ], :int)
  callback(:JSGetMethodOp, [ :pointer, :pointer, :long, :pointer ], :pointer)
  callback(:JSSetMethodOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSEnumerateValuesOp, [ :pointer, :pointer, :int, :pointer, :pointer, :pointer ], :int)
  callback(:JSEqualityOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSConcatenateOp, [ :pointer, :pointer, :long, :pointer ], :int)
  callback(:JSNative, [ :pointer, :pointer, :uint, :pointer, :pointer ], :int)
  JSCONTEXT_NEW = 0
  JSCONTEXT_DESTROY = 1

  callback(:JSContextCallback, [ :pointer, :uint ], :int)
  JSGC_BEGIN = 0
  JSGC_END = 1
  JSGC_MARK_END = 2
  JSGC_FINALIZE_END = 3

  callback(:JSGCCallback, [ :pointer, :int ], :int)
  callback(:JSBranchCallback, [ :pointer, :pointer ], :int)
  callback(:JSErrorReporter, [ :pointer, :string, :pointer ], :void)
  JSEXN_NONE = -1
  JSEXN_ERR = 0
  JSEXN_INTERNALERR = 1
  JSEXN_EVALERR = 2
  JSEXN_RANGEERR = 3
  JSEXN_REFERENCEERR = 4
  JSEXN_SYNTAXERR = 5
  JSEXN_TYPEERR = 6
  JSEXN_URIERR = 7
  JSEXN_LIMIT = 8

  class JSErrorFormatString < FFI::Struct
    layout(
           :format, :string,
           :argCount, :ushort,
           :exnType, :short
    )
  end
  callback(:JSErrorCallback, [ :pointer, :string, :uint ], :pointer)
  callback(:JSLocaleToUpperCase, [ :pointer, :pointer, :pointer ], :int)
  callback(:JSLocaleToLowerCase, [ :pointer, :pointer, :pointer ], :int)
  callback(:JSLocaleCompare, [ :pointer, :pointer, :pointer, :pointer ], :int)
  callback(:JSLocaleToUnicode, [ :pointer, :string, :pointer ], :int)
  callback(:JSPrincipalsTranscoder, [ :pointer, :pointer ], :int)
  callback(:JSObjectPrincipalsFinder, [ :pointer, :pointer ], :pointer)
  JSVAL_OBJECT = 0x0
  JSVAL_INT = 0x1
  JSVAL_DOUBLE = 0x2
  JSVAL_STRING = 0x4
  JSVAL_BOOLEAN = 0x6
  JSVAL_TAGBITS = 3
  JSVAL_INT_BITS = 31
  JSPROP_ENUMERATE = 0x01
  JSPROP_READONLY = 0x02
  JSPROP_PERMANENT = 0x04
  JSPROP_EXPORTED = 0x08
  JSPROP_GETTER = 0x10
  JSPROP_SETTER = 0x20
  JSPROP_SHARED = 0x40
  JSPROP_INDEX = 0x80
  JSFUN_LAMBDA = 0x08
  JSFUN_GETTER = 0x10
  JSFUN_SETTER = 0x20
  JSFUN_BOUND_METHOD = 0x40
  JSFUN_HEAVYWEIGHT = 0x80
  JSFUN_THISP_STRING = 0x0100
  JSFUN_THISP_NUMBER = 0x0200
  JSFUN_THISP_BOOLEAN = 0x0400
  JSFUN_THISP_PRIMITIVE = 0x0700
  JSFUN_FLAGS_MASK = 0x07f8
  JSFUN_GENERIC_NATIVE = 0x08
  attach_function :JS_Now, [  ], :long
  attach_function :JS_GetNaNValue, [ :pointer ], :long
  attach_function :JS_GetNegativeInfinityValue, [ :pointer ], :long
  attach_function :JS_GetPositiveInfinityValue, [ :pointer ], :long
  attach_function :JS_GetEmptyStringValue, [ :pointer ], :long
  attach_function :JS_ConvertArguments, [ :pointer, :uint, :pointer, :string, :varargs ], :int
  attach_function :JS_PushArguments, [ :pointer, :pointer, :string, :varargs ], :pointer
  attach_function :JS_PopArguments, [ :pointer, :pointer ], :void
  attach_function :JS_ConvertValue, [ :pointer, :long, :int, :pointer ], :int
  attach_function :JS_ValueToObject, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToFunction, [ :pointer, :long ], :pointer
  attach_function :JS_ValueToConstructor, [ :pointer, :long ], :pointer
  attach_function :JS_ValueToString, [ :pointer, :long ], :pointer
  attach_function :JS_ValueToNumber, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToECMAInt32, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToECMAUint32, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToInt32, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToUint16, [ :pointer, :long, :pointer ], :int
  attach_function :JS_ValueToBoolean, [ :pointer, :long, :pointer ], :int
  attach_function :JS_TypeOfValue, [ :pointer, :long ], :int
  attach_function :JS_GetTypeName, [ :pointer, :int ], :string
  attach_function :JS_Init, [ :uint ], :pointer
  attach_function :JS_Finish, [ :pointer ], :void
  attach_function :JS_ShutDown, [  ], :void
  attach_function :JS_GetRuntimePrivate, [ :pointer ], :pointer
  attach_function :JS_SetRuntimePrivate, [ :pointer, :pointer ], :void
  attach_function :JS_Lock, [ :pointer ], :void
  attach_function :JS_Unlock, [ :pointer ], :void
  attach_function :JS_SetContextCallback, [ :pointer, :JSContextCallback ], :JSContextCallback
  attach_function :JS_NewContext, [ :pointer, :uint ], :pointer
  attach_function :JS_DestroyContext, [ :pointer ], :void
  attach_function :JS_DestroyContextNoGC, [ :pointer ], :void
  attach_function :JS_DestroyContextMaybeGC, [ :pointer ], :void
  attach_function :JS_GetContextPrivate, [ :pointer ], :pointer
  attach_function :JS_SetContextPrivate, [ :pointer, :pointer ], :void
  attach_function :JS_GetRuntime, [ :pointer ], :pointer
  attach_function :JS_ContextIterator, [ :pointer, :pointer ], :pointer
  attach_function :JS_GetVersion, [ :pointer ], :int
  attach_function :JS_SetVersion, [ :pointer, :int ], :int
  attach_function :JS_VersionToString, [ :int ], :string
  attach_function :JS_StringToVersion, [ :string ], :int
  attach_function :JS_GetOptions, [ :pointer ], :uint
  attach_function :JS_SetOptions, [ :pointer, :uint ], :uint
  attach_function :JS_ToggleOptions, [ :pointer, :uint ], :uint
  attach_function :JS_GetImplementationVersion, [  ], :string
  attach_function :JS_GetGlobalObject, [ :pointer ], :pointer
  attach_function :JS_SetGlobalObject, [ :pointer, :pointer ], :void
  attach_function :JS_InitStandardClasses, [ :pointer, :pointer ], :int
  attach_function :JS_ResolveStandardClass, [ :pointer, :pointer, :long, :pointer ], :int
  attach_function :JS_EnumerateStandardClasses, [ :pointer, :pointer ], :int
  attach_function :JS_EnumerateResolvedStandardClasses, [ :pointer, :pointer, :pointer ], :pointer
  attach_function :JS_GetClassObject, [ :pointer, :pointer, :int, :pointer ], :int
  attach_function :JS_GetScopeChain, [ :pointer ], :pointer
  attach_function :JS_malloc, [ :pointer, :uint ], :pointer
  attach_function :JS_realloc, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_free, [ :pointer, :pointer ], :void
  attach_function :JS_strdup, [ :pointer, :string ], :string
  attach_function :JS_NewDouble, [ :pointer, :double ], :pointer
  attach_function :JS_NewDoubleValue, [ :pointer, :double, :pointer ], :int
  attach_function :JS_NewNumberValue, [ :pointer, :double, :pointer ], :int
  attach_function :JS_AddRoot, [ :pointer, :pointer ], :int
  attach_function :JS_AddNamedRoot, [ :pointer, :pointer, :string ], :int
  attach_function :JS_AddNamedRootRT, [ :pointer, :pointer, :string ], :int
  attach_function :JS_RemoveRoot, [ :pointer, :pointer ], :int
  attach_function :JS_RemoveRootRT, [ :pointer, :pointer ], :int
  attach_function :JS_ClearNewbornRoots, [ :pointer ], :void
  attach_function :JS_EnterLocalRootScope, [ :pointer ], :int
  attach_function :JS_LeaveLocalRootScope, [ :pointer ], :void
  attach_function :JS_LeaveLocalRootScopeWithResult, [ :pointer, :long ], :void
  attach_function :JS_ForgetLocalRoot, [ :pointer, :pointer ], :void
  JS_MAP_GCROOT_NEXT = 0
  JS_MAP_GCROOT_STOP = 1
  JS_MAP_GCROOT_REMOVE = 2
  callback(:JSGCRootMapFun, [ :pointer, :string, :pointer ], :int)
  attach_function :JS_MapGCRoots, [ :pointer, :JSGCRootMapFun, :pointer ], :uint
  attach_function :JS_LockGCThing, [ :pointer, :pointer ], :int
  attach_function :JS_LockGCThingRT, [ :pointer, :pointer ], :int
  attach_function :JS_UnlockGCThing, [ :pointer, :pointer ], :int
  attach_function :JS_UnlockGCThingRT, [ :pointer, :pointer ], :int
  attach_function :JS_MarkGCThing, [ :pointer, :pointer, :string, :pointer ], :void
  attach_function :JS_GC, [ :pointer ], :void
  attach_function :JS_MaybeGC, [ :pointer ], :void
  attach_function :JS_SetGCCallback, [ :pointer, :JSGCCallback ], :JSGCCallback
  attach_function :JS_SetGCCallbackRT, [ :pointer, :JSGCCallback ], :JSGCCallback
  attach_function :JS_IsAboutToBeFinalized, [ :pointer, :pointer ], :int
  JSGC_MAX_BYTES = 0
  JSGC_MAX_MALLOC_BYTES = 1
